site in progress

--- a/index.html
+++ b/index.html
@@ -1,5 +1,39 @@
+<!DOCTYPE html>
 <html>
-  <body>
-      Hello DBC! HUZZAH!
-  </body>
+  <head>
+  <title> Richard Santin @ DBC </title>
+
+  <meta name="The DBC Experience" content="Blog and Portfolio of my experience at DBC">
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  </head>
+<body>
+  <div id="wrapper">
+  <header>
+    <form class="bioform">
+    <p> Search</p>
+    <input type="search" name="search"/>
+    <input type="submit" value="Search"/>
+  </form>
+  <!-- working logo
+  <div id="logo"> <img src="image/path" width="150" height="150" alt="?" -->
+  </header> <!-- end header -->
+<div id="content">
+
+ Cupcake ipsum dolor sit amet. Icing toffee donut brownie lemon drops chocolate cake brownie. Soufflé oat cake gummies powder. Marzipan cupcake fruitcake. Bonbon cake gummi bears cake. Candy canes ice cream chupa chups. Muffin dessert chocolate cake.
+
+  </div> <!-- end content -->
+  <div id="leftcol">
+  </div> <!-- end left col -->
+  <div id="rightcol">
+  </div> <!-- end left col -->
+
+Cupcake ipsum dolor sit amet. Icing toffee donut brownie lemon drops chocolate cake brownie. Soufflé oat cake gummies powder. Marzipan cupcake fruitcake. Bonbon cake gummi bears cake. Candy canes ice cream chupa chups. Muffin dessert chocolate cake. blah.
+
+<iframe src="https://www.google.com/calendar/embed?src=richard.santin%40gmail.com&ctz=America/Los_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+
+  <footer>
+  Contact us
+  </footer>
+ </div> <!-- end wrapper -->
+</body>
 </html>
