--- a/blog-template.html
+++ b/blog-template.html
@@ -4,7 +4,7 @@
   <title> Richard Santin @ DBC </title>
 
   <meta name="The DBC Experience" content="Blog and Portfolio of my experience at DBC">
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="stylesheets/blog-stylesheets.css">
   </head>
 <body>
   <div id="wrapper">
