--- a/blog-template.html
+++ b/blog-template.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
   <title> Richard Santin @ DBC </title>
 
   <meta name="The DBC Experience" content="Blog and Portfolio of my experience at DBC">
   <link rel="stylesheet" type="text/css" href="stylesheets/blog-stylesheets.css">
-  </head>
+</head>
 <body>
-  <div id="wrapper">
+  <div class="wrapper">
   <header>
+    this is a header
     <form class="bioform">
     <p> Search</p>
     <input type="search" name="search"/>
@@ -17,19 +18,20 @@
   <!-- working logo
   <div id="logo"> <img src="image/path" width="150" height="150" alt="?" -->
   </header> <!-- end header -->
-<div id="content">
-
- Cupcake ipsum dolor sit amet. Icing toffee donut brownie lemon drops chocolate cake brownie. Soufflé oat cake gummies powder. Marzipan cupcake fruitcake. Bonbon cake gummi bears cake. Candy canes ice cream chupa chups. Muffin dessert chocolate cake.
-
-  </div> <!-- end content -->
-  <div id="leftcol">
-  </div> <!-- end left col -->
-  <div id="rightcol">
-  </div> <!-- end left col -->
-
-Cupcake ipsum dolor sit amet. Icing toffee donut brownie lemon drops chocolate cake brownie. Soufflé oat cake gummies powder. Marzipan cupcake fruitcake. Bonbon cake gummi bears cake. Candy canes ice cream chupa chups. Muffin dessert chocolate cake. blah.
-
+  <div class="container">
+    <div class="leftcol"> 
+      sidebarL
+    </div> <!-- end left col -->
+    <div class="rightcol">
+      sidebarR
+    </div> <!-- end right col -->
+    <div class="content">
+ Cupcake ipsum dolor sit amet. Icing toffee donut brownie lemon drops chocolate cake brownie. Soufflé oat cake gummies powder. Marzipan cupcake fruitcake. Bonbon cake gummi bears cake. Candy canes ice cream chupa chups. Muffin dessert chocolate cake. 
+    </div> <!-- end content -->
+  </div> <!-- end container -->
+<!-- Google Calendar
 <iframe src="https://www.google.com/calendar/embed?src=richard.santin%40gmail.com&ctz=America/Los_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+-->
 
   <footer>
   Contact us
