google calendar added

--- a/blog-template.html
+++ b/blog-template.html
@@ -5,6 +5,7 @@
 
   <meta name="The DBC Experience" content="Blog and Portfolio of my experience at DBC">
   <link rel="stylesheet" type="text/css" href="stylesheets/blog-stylesheets.css">
+
 </head>
 <body>
   <div class="wrapper">
@@ -20,21 +21,21 @@
   </header> <!-- end header -->
   <div class="container">
     <div class="leftcol"> 
-      sidebarL
+      Blog
     </div> <!-- end left col -->
     <div class="rightcol">
-      sidebarR
+      Portfolio
     </div> <!-- end right col -->
     <div class="content">
  Cupcake ipsum dolor sit amet. Icing toffee donut brownie lemon drops chocolate cake brownie. Soufflé oat cake gummies powder. Marzipan cupcake fruitcake. Bonbon cake gummi bears cake. Candy canes ice cream chupa chups. Muffin dessert chocolate cake. 
     </div> <!-- end content -->
   </div> <!-- end container -->
-<!-- Google Calendar
-<iframe src="https://www.google.com/calendar/embed?src=richard.santin%40gmail.com&ctz=America/Los_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
--->
 
   <footer>
-  Contact us
+    <div class="calendar">
+     <iframe src="https://www.google.com/calendar/embed?title=Make%20an%20Appointment&amp;showPrint=0&amp;height=250&amp;wkst=1&amp;bgcolor=%236633ff&amp;src=richard.santin%40gmail.com&amp;color=%232952A3&amp;ctz=America%2FLos_Angeles" style=" border-width:0 " width="180" height="250" frameborder="0" scrolling="no">
+     </iframe>
+    </div> <!-- end calendar -->
   </footer>
  </div> <!-- end wrapper -->
 </body>
