--- a/blog-template.html
+++ b/blog-template.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
   <title> Richard Santin @ DBC </title>
 
   <meta name="The DBC Experience" content="Blog and Portfolio of my experience at DBC">
@@ -22,9 +23,21 @@
   <div class="container">
     <div class="leftcol"> 
       Blog
+      <ul>
+          <li><a href="#">Blog 1</a></li>
+          <li><a href="#">Blog 2</a></li>
+          <li><a href="#">Blog 3</a></li>
+          <li><a href="#">Blog 4</a></li>
+      </ul>
     </div> <!-- end left col -->
     <div class="rightcol">
       Portfolio
+      <ul>
+          <li><a href="#">Blog 1</a></li>
+          <li><a href="#">Blog 2</a></li>
+          <li><a href="#">Blog 3</a></li>
+          <li><a href="#">Blog 4</a></li>
+      </ul>
     </div> <!-- end right col -->
     <div class="content">
  Cupcake ipsum dolor sit amet. Icing toffee donut brownie lemon drops chocolate cake brownie. Soufflé oat cake gummies powder. Marzipan cupcake fruitcake. Bonbon cake gummi bears cake. Candy canes ice cream chupa chups. Muffin dessert chocolate cake. 
@@ -33,7 +46,7 @@
 
   <footer>
     <div class="calendar">
-     <iframe src="https://www.google.com/calendar/embed?title=Make%20an%20Appointment&amp;showPrint=0&amp;height=250&amp;wkst=1&amp;bgcolor=%236633ff&amp;src=richard.santin%40gmail.com&amp;color=%232952A3&amp;ctz=America%2FLos_Angeles" style=" border-width:0 " width="180" height="250" frameborder="0" scrolling="no">
+     <iframe src="https://www.google.com/calendar/embed?title=Make%20an%20Appointment&amp;showPrint=0&amp;height=250&amp;wkst=1&amp;bgcolor=%236633ff&amp;src=richard.santin%40gmail.com&amp;color=%232952A3&amp;ctz=America%2FLos_Angeles"width="180" height="250" frameborder="0" scrolling="no">
      </iframe>
     </div> <!-- end calendar -->
   </footer>
