updating sidebar buttons

--- a/blog-template.html
+++ b/blog-template.html
@@ -12,11 +12,11 @@
   <div class="wrapper">
   <header>
     this is a header
-    <form class="bioform">
+    <!-- <form class="bioform">
     <p> Search</p>
     <input type="search" name="search"/>
     <input type="submit" value="Search"/>
-  </form>
+  </form> -->
   <!-- working logo
   <div id="logo"> <img src="image/path" width="150" height="150" alt="?" -->
   </header> <!-- end header -->
@@ -39,9 +39,11 @@
           <li><a href="#">Blog 4</a></li>
       </ul>
     </div> <!-- end right col -->
-    <div class="content">
+    <div class="centercol">
+      <div class="content">
  Cupcake ipsum dolor sit amet. Icing toffee donut brownie lemon drops chocolate cake brownie. Soufflé oat cake gummies powder. Marzipan cupcake fruitcake. Bonbon cake gummi bears cake. Candy canes ice cream chupa chups. Muffin dessert chocolate cake. 
-    </div> <!-- end content -->
+      </div> <!-- end content -->
+    </div> <!-- end centercol -->
   </div> <!-- end container -->
 
   <footer>
