--- a/blog-template.html
+++ b/blog-template.html
@@ -11,7 +11,9 @@
 <body>
   <div class="wrapper">
   <header>
-    this is a header
+    <h1>The Tales of DevBootCamp</h1>
+    <br></br>
+    <h2>By: Richard Santin</h2>
     <!-- <form class="bioform">
     <p> Search</p>
     <input type="search" name="search"/>
@@ -22,35 +24,76 @@
   </header> <!-- end header -->
   <div class="container">
     <div class="leftcol"> 
-      Blog
+      <h4>Blog</h4>
       <ul>
-          <li><a href="#">Blog 1</a></li>
-          <li><a href="#">Blog 2</a></li>
-          <li><a href="#">Blog 3</a></li>
-          <li><a href="#">Blog 4</a></li>
+          <li><a href="/Users/richardsantin/Documents/DBCGits/ridou.github.io/blog/c1-chefs-kitchen.html">DBC EXP 10/12</a></li>
+          <li><a href="/Users/richardsantin/Documents/DBCGits/ridou.github.io/blog/t1-git-blog.html">Technical 10/12</a></li>
+          <li><a href="/Users/richardsantin/Documents/DBCGits/ridou.github.io/blog/t2-css-design.html">HTML & CSS 10/19</a></li>
+          <li><a href="/Users/richardsantin/Documents/DBCGits/ridou.github.io/blog/c3_thinking-style.html">Think Man 10/26</a></li>
+          <li><a href="/Users/richardsantin/Documents/DBCGits/ridou.github.io/blog/t3-arrays-hashes.html">Array Hash 10/26</a></li>
+          <li><a href="#">Technical 3</a></li>
+          <li><a href="#">Blog 7</a></li>
+          <li><a href="#">Blog 8</a></li>
+          <li><a href="#">Blog 9</a></li>
+          <li><a href="#">Blog 10</a></li>
+          <li><a href="#">Blog 11</a></li>
+          <li><a href="#">Blog 12</a></li>
+          <li><a href="#">Blog 10</a></li>
+          <li><a href="#">Blog 11</a></li>
+          <li><a href="#">Blog 12</a></li>
       </ul>
     </div> <!-- end left col -->
     <div class="rightcol">
-      Portfolio
+      <h4>Portfolio</h4>
       <ul>
           <li><a href="#">Blog 1</a></li>
           <li><a href="#">Blog 2</a></li>
           <li><a href="#">Blog 3</a></li>
           <li><a href="#">Blog 4</a></li>
+          <li><a href="#">Blog 5</a></li>
+          <li><a href="#">Blog 6</a></li>
+          <li><a href="#">Blog 7</a></li>
+          <li><a href="#">Blog 8</a></li>
+          <li><a href="#">Blog 9</a></li>
+          <li><a href="#">Blog 10</a></li>
+          <li><a href="#">Blog 11</a></li>
+          <li><a href="#">Blog 12</a></li>
+          <li><a href="#">Blog 10</a></li>
+          <li><a href="#">Blog 11</a></li>
+          <li><a href="#">Blog 12</a></li>
       </ul>
     </div> <!-- end right col -->
     <div class="centercol">
       <div class="content">
- Cupcake ipsum dolor sit amet. Icing toffee donut brownie lemon drops chocolate cake brownie. Soufflé oat cake gummies powder. Marzipan cupcake fruitcake. Bonbon cake gummi bears cake. Candy canes ice cream chupa chups. Muffin dessert chocolate cake. 
+ Welcome to the Tales of DevBootCamp featuring Richard Santin. Enjoy the show!
       </div> <!-- end content -->
     </div> <!-- end centercol -->
   </div> <!-- end container -->
 
   <footer>
-    <div class="calendar">
-     <iframe src="https://www.google.com/calendar/embed?title=Make%20an%20Appointment&amp;showPrint=0&amp;height=250&amp;wkst=1&amp;bgcolor=%236633ff&amp;src=richard.santin%40gmail.com&amp;color=%232952A3&amp;ctz=America%2FLos_Angeles"width="180" height="250" frameborder="0" scrolling="no">
-     </iframe>
+
+    <div id="gcalendar">
+     <iframe src="https://www.google.com/calendar/embed?title=Make%20an%20Appointment&amp;height=260&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=richard.santin%40gmail.com&amp;color=%232952A3&amp;ctz=America%2FLos_Angeles" style=" border-width:0 " width="450" height="260" frameborder="0" scrolling="no"></iframe>
     </div> <!-- end calendar -->
+    <div id="contactlist">
+      <h3>Let's Connect</h3>
+
+        <div id="twitter" class="button">
+        <a href="https://twitter.com/ridousant"><img src="/Users/richardsantin/Documents/DBCGits/ridou.github.io/img/button_twitter.png"></a>
+        </div>
+
+        <div id="linkedin" class="button">
+        <a href="http://lnkd.in/NNxzJZ"><img src="/Users/richardsantin/Documents/DBCGits/ridou.github.io/img/button_linkedin.png"></a>
+        </div>
+
+        <div id="google" class="button">
+        <a href="https://plus.google.com/u/0/110157820708862068328/posts"><img src="/Users/richardsantin/Documents/DBCGits/ridou.github.io/img/button_google.png"></a>
+        </div>
+
+        <div id="github" class="button">
+        <a href="https://github.com/Ridou"><img src="/Users/richardsantin/Documents/DBCGits/ridou.github.io/img/button_github.png"></a>
+        </div>
+    </div> <!-- end contactlist -->
   </footer>
  </div> <!-- end wrapper -->
 </body>
