Adding weekly blogs

--- a/blog-template.html
+++ b/blog-template.html
@@ -27,11 +27,11 @@
       <h4>Blog</h4>
       <ul>
           <li><a href="http://ridou.github.io/blog/c1-chefs-kitchen.html">DBC EXP 10/12</a></li>
-          <li><a href="http://ridou.github.io/blog/t1-git-blog.html">Technical 10/12</a></li>
+          <li><a href="http://ridou.github.io/blog/t1-git-blog.html">GitHub Fun 10/12</a></li>
           <li><a href="http://ridou.github.io/blog/t2-css-design.html">HTML & CSS 10/19</a></li>
           <li><a href="http://ridou.github.io/blog/c3-thinking-style.html">Think Man 10/26</a></li>
           <li><a href="http://ridou.github.io/blog/t3-arrays-hashes.html">Array Hash 10/26</a></li>
-          <li><a href="#">Technical 3</a></li>
+          <li><a href="http://ridou.github.io/blog/c4-tech-issues.html">Tech Issues 11/2</a></li>
           <li><a href="#">Blog 7</a></li>
           <li><a href="#">Blog 8</a></li>
           <li><a href="#">Blog 9</a></li>
