new font and content edit

--- a/blog-template.html
+++ b/blog-template.html
@@ -5,8 +5,8 @@
   <title> Richard Santin @ DBC </title>
 
   <meta name="The DBC Experience" content="Blog and Portfolio of my experience at DBC">
+  <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="stylesheets/blog-stylesheets.css">
-
 </head>
 <body>
   <div class="wrapper">
