--- a/blog-template.html
+++ b/blog-template.html
@@ -32,7 +32,7 @@
           <li><a href="http://ridou.github.io/blog/c3-thinking-style.html">Think Man 10/26</a></li>
           <li><a href="http://ridou.github.io/blog/t3-arrays-hashes.html">Array Hash 10/26</a></li>
           <li><a href="http://ridou.github.io/blog/c4-tech-issues.html">Tech Issues 11/2</a></li>
-          <li><a href="#">Blog 7</a></li>
+          <li><a href="http://ridou.github.io/blog/t4-enumerable-methods.html">Enumerables 11/2</a></li>
           <li><a href="#">Blog 8</a></li>
           <li><a href="#">Blog 9</a></li>
           <li><a href="#">Blog 10</a></li>
@@ -65,7 +65,7 @@
     </div> <!-- end right col -->
     <div class="centercol">
       <div class="content">
- Welcome to the Tales of DevBootCamp featuring Richard Santin. Enjoy the show!
+ <h6>Welcome to the Tales of DevBootCamp featuring Richard Santin. Enjoy the show!</h6>
       </div> <!-- end content -->
     </div> <!-- end centercol -->
   </div> <!-- end container -->
