--- a/blog-template.html
+++ b/blog-template.html
@@ -3,27 +3,22 @@
 <head>
   <meta charset="utf-8">
   <title> Richard Santin @ DBC </title>
-
-  <meta name="The DBC Experience" content="Blog and Portfolio of my experience at DBC">
-  <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css">
+  <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="stylesheets/blog-stylesheets.css">
+  <script type="text/javascript" src="js/blog-js.js"></script>
+  <meta name="The DBC Experience" content="Blog and Portfolio of my experience at DBC">
 </head>
 <body>
-  <div class="wrapper">
+  <div id="wrapper">
   <header>
     <h1>The Tales of DevBootCamp</h1>
-    <br></br>
-    <h2>By: Richard Santin</h2>
-    <!-- <form class="bioform">
-    <p> Search</p>
-    <input type="search" name="search"/>
-    <input type="submit" value="Search"/>
-  </form> -->
-  <!-- working logo
-  <div id="logo"> <img src="image/path" width="150" height="150" alt="?" -->
+    <img id="rubyfun" src="http://mlafeldt.github.io/static/images/practicingruby.png"</img>
+     <!-- <h2>By: Richard Santin</h2> -->
   </header> <!-- end header -->
-  <div class="container">
-    <div class="leftcol"> 
+  <div id="container">
+    <div id="leftcol"> 
       <h4>Blog</h4>
       <ul>
           <li><a href="http://ridou.github.io/blog/c1-chefs-kitchen.html">DBC EXP 10/12</a></li>
@@ -43,7 +38,7 @@
           <li><a href="http://ridou.github.io/blog/t8-tech.html">Memory 11/30</a></li>
       </ul>
     </div> <!-- end left col -->
-    <div class="rightcol">
+    <div id="rightcol">
       <h4>Portfolio</h4>
       <ul>
           <li><a href="#">Blog 1</a></li>
@@ -63,9 +58,10 @@
           <li><a href="#">Blog 12</a></li>
       </ul>
     </div> <!-- end right col -->
-    <div class="centercol">
-      <div class="content">
- <h6>Welcome to the Tales of DevBootCamp featuring Richard Santin. Enjoy the show!</h6>
+
+    <div id="centercol">
+      <div id="content">
+        <h6>Welcome to the Tales of DevBootCamp featuring Richard Santin. Enjoy the show!</h6>
       </div> <!-- end content -->
     </div> <!-- end centercol -->
   </div> <!-- end container -->
