--- a/blog-template.html
+++ b/blog-template.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css">
   <link rel="stylesheet" href="stylesheets/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="stylesheets/blog-stylesheets.css">
-  <script src="js/blog-js.js" type="text/javascript"></script>
+  <script src="/js/blog-js.js" type="text/javascript"></script>
   <meta name="The DBC Experience" content="Blog and Portfolio of my experience at DBC">
 </head>
 <body>
