--- a/blog-template.html
+++ b/blog-template.html
@@ -20,7 +20,7 @@
   </header> <!-- end header -->
   <div id="container">
     <div id="leftcol"> 
-      <h4>Blog</h4>
+      <h4>Blog
       <ul>
           <li><a href="http://ridou.github.io/blog/c1-chefs-kitchen.html">DBC EXP 10/12</a></li>
           <li><a href="http://ridou.github.io/blog/t1-git-blog.html">GitHub Fun 10/12</a></li>
@@ -38,6 +38,7 @@
           <li><a href="http://ridou.github.io/blog/c8-conflict.html">Conflict 11/30</a></li>
           <li><a href="http://ridou.github.io/blog/t8-tech.html">Memory 11/30</a></li>
       </ul>
+      </h4>
     </div> <!-- end left col -->
     <div id="rightcol">
       <h4>Portfolio</h4>
