--- a/blog-template.html
+++ b/blog-template.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title> Richard Santin @ DBC </title>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
   <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css">
@@ -37,6 +39,7 @@
           <li><a href="http://ridou.github.io/blog/t7-JavaScript.html">JS vs ruby 11/23</a></li>
           <li><a href="http://ridou.github.io/blog/c8-conflict.html">Conflict 11/30</a></li>
           <li><a href="http://ridou.github.io/blog/t8-tech.html">Memory 11/30</a></li>
+          <li><a href="http://ridou.github.io/blog/c9-questions.html">Good Question 12/7</a></li>
       </ul>
       </h4>
     </div> <!-- end left col -->
@@ -63,7 +66,9 @@
 
     <div id="centercol">
       <div id="content">
-        <h6>Welcome to the Tales of DevBootCamp featuring Richard Santin. Enjoy the show!</h6>
+        <h6>Welcome to the Tales of DevBootCamp featuring Richard Santin. 
+          <br></br>
+          Enjoy the show!</h6>
       </div> <!-- end content -->
     </div> <!-- end centercol -->
   </div> <!-- end container -->
