--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           <li><a href="http://ridou.github.io/blog/c8-conflict.html">Conflict 11/30</a></li>
           <li><a href="http://ridou.github.io/blog/t8-tech.html">Memory 11/30</a></li>
           <li><a href="http://ridou.github.io/blog/c9-questions.html">Good Question 12/7</a></li>
+          <li><a href="http://ridou.github.io/blog/t9-week1.html">Week 1 12/15</a></li>
       </ul>
       </h4>
     </div> <!-- end left col -->
